--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "imagemin-mozjpeg": "^9.0.0",
         "imagemin-pngquant": "^9.0.2",
         "imagemin-svgo": "^8.0.0",
+        "imagemin-webp": "^7.0.0",
         "mini-css-extract-plugin": "^1.3.3",
         "postcss": "^8.2.6",
         "postcss-import": "^14.0.0",
@@ -67,6 +68,7 @@
         "normalize": "^0.3.1",
         "normalize.css": "^8.0.1",
         "smoothscroll-polyfill": "^0.4.4",
+        "swiper": "^8.3.2",
         "tippy.js": "^6.3.1"
     }
 }
